Assignment 2: accessibility & responsive fixes (skip link, focus styles, alt text, grid)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <a class="skip-link" href="#main-content">Skip to content</a>
 <header class="topnav">
   <div class="container navwrap">
     <a href="#home" class="brand">
@@ -29,7 +30,7 @@
   </div>
 </header>
 
-<main id="home" class="hero container">
+<main id="main-content" role="main" class="hero container">
   <p class="kicker">Frontend • UI/UX • Graphic Design</p>
   <h1 class="big">Hi, I'm <span class="grad">Ekeleme Miracle</span>.</h1>
   <p class="lede">I craft fast, accessible interfaces and clean design systems.</p>
@@ -49,7 +50,7 @@
   </div>
 </main>
 
-<section id="work" class="section container">
+<section id="work" class="section container" id="main-content" role="main">
   <div class="section-head">
     <h2>Projects</h2><p class="muted">Selected work</p>
   </div>
